# nahiku

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  example.ipynb  pyproject.toml  synthetic_lightcurve_example.ipynb
docs/: conf.py  index.rst  modules.rst  nahiku.rst  requirements.txt
examples/: synthetic_lightcurve_example.ipynb
src/: ExhaustiveSearch.py  GreedySearch.py  Nahiku.py  Search.py  balmung.py  exhaustive_helpers.py  exhaustive_search.py  gp_helpers.py  kernels.py  nahiku.py  nahiku_helpers.py  utils.py
src/nahiku/: __init__.py  balmung.py  exhaustive_helpers.py  exhaustive_search.py  gp_helpers.py  greedy_search.py  nahiku.py  search.py
tests/: test_balmung.py  test_coverage_boost.py  test_exhaustive_helpers.py  test_exhaustive_helpers_extra.py  test_exhaustive_search.py  test_final_coverage.py  test_gp_helpers.py  test_greedy_search.py  test_nahiku.py  test_plots.py  test_search.py
