[project]
name = "nahiku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Linnea Wolniewicz", email = "linnea@wolniewicz.com" }
]
requires-python = ">=3.12"
dependencies = [
    "astropy==6.1.0",
    "astroquery==0.4.11",
    "lightkurve==2.5.0",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scipy==1.13.1",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "torchvision==0.18.1",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchvision = [{ index = "pytorch-cu118" }]
torchaudio = [{ index = "pytorch-cu118" }]
